--- a/src/components/StyledButton.module.css
+++ b/src/components/StyledButton.module.css
@@ -5,5 +5,8 @@
 
   border-radius: 0.5rem;
   background-color: #3f3f3f;
-  color: white
+  color: white;
+
+  font-weight: 700;
+  font-size: 1rem;
 };
