--- a/src/components/BackLink.module.css
+++ b/src/components/BackLink.module.css
@@ -1,9 +1,15 @@
 .backlink-wrapper {
-  padding: 0;
+  display: flex;
+  padding: 0.25rem 1rem;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-start;
+  width: fit-content;
 }
 
 .backlink-text {
   margin: 0;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: 400;
+  color: #116A8D;
 }
