--- a/src/components/ContentTitle.module.css
+++ b/src/components/ContentTitle.module.css
@@ -1,9 +1,15 @@
+.main-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .main-content-title {
   color: #000;
-  font-size: 2rem;
+  font-size: 2.25rem;
   font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+  font-weight: 800;
+  line-height: 120%;
   margin-block-start: 0rem;
   margin-block-end: 0rem;
 }
@@ -14,10 +20,5 @@
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-  margin-block-start: 0.5rem;
-  margin-block-end: 0rem;
-}
-
-.create-gear-list-button-wrapper {
-  
+  margin: 0;
 }
