--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
     padding: 0;
     font-family: Inter;
 }
+
+.App {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
