Correct main content padding

--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -8,6 +8,5 @@
     flex-direction: column;
     gap: 2.5rem;
     width: 70.108rem;
-    padding-left: 2.97rem;
-    padding-top: 3.37rem;
+    padding: 1.5rem 2rem;
 }
