--- a/src/components/SelectInputField.module.css
+++ b/src/components/SelectInputField.module.css
@@ -1,6 +1,7 @@
 .select-input-field-wrapper {
   display: flex;
   flex-direction: column;
+  flex: 1 1 auto;
   align-items: flex-start;
   padding-bottom: 1.5rem;
 }
@@ -35,12 +36,15 @@
 }
 
 .select-input-field-input-wrapper {
+  display: flex;
   padding: 0.0625rem 0rem;
   align-items: center;
+  align-self: stretch;
 }
 
 .select-input-field-input {
   padding: 0.5rem 0.75rem;
+  flex-grow: 1;
   border: solid 1px #ABABAB;
   border-radius: 0.125rem;
 
