--- a/src/components/PreparePanel.module.css
+++ b/src/components/PreparePanel.module.css
@@ -59,6 +59,8 @@
 }
 
 .table {
+  display: flex;
+  flex-direction: column;
   flex: 1 0;
   text-align: left;
 }
@@ -120,4 +122,9 @@
 .td-text {
   flex: 1 0 0;
   padding: 1rem;
+  
+  /* For text overflow */
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
