--- a/src/components/PreparePanel.module.css
+++ b/src/components/PreparePanel.module.css
@@ -40,7 +40,6 @@
   color: var(--Greyscale-Text-Title, #1F1F1F);
 
   /* H4 / Bold */
-  font-family: Inter;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
@@ -59,39 +58,26 @@
 }
 
 .table {
-  display: flex;
-  flex-direction: column;
-  flex: 1 0;
+  table-layout: fixed;
+  width: 100%;
   text-align: left;
-}
-
-.thead {
-  display: flex;
-}
-
-.tr-head {
-  display: flex;
-  flex: 1 0 0;
-
-  border-bottom: 1px solid var(--Greyscale-Border-Subtle, #EBEBEB);
-  background: var(--LightTeal-Surface-Sutble, #FAFDFE);
-}
-
-.tbody {
-  display: flex;
-  flex-direction: column;
 }
 
 .th-empty {
   padding: 1rem;
   width: 0.875rem;
   height: 1.3125rem;
+
+  border-bottom: 1px solid var(--Greyscale-Border-Subtle, #EBEBEB);
+  background: var(--LightTeal-Surface-Sutble, #FAFDFE);  
 }
 
 .th-text {
   position: relative;
   padding: 1rem;
-  flex: 1 0 0;
+
+  border-bottom: 1px solid var(--Greyscale-Border-Subtle, #EBEBEB);
+  background: var(--LightTeal-Surface-Sutble, #FAFDFE);
 }
 
 .divider {
@@ -104,25 +90,21 @@
   background-color: #EBEBEB;
 }
 
-.tr {
-  display: flex;
-  align-items: center;
+.td-checkbox {
+  padding: 1rem;
+  width: 0.875rem;
+  height: 1.5rem;
 
   border-bottom: 1px solid var(--Greyscale-Border-Subtle, #EBEBEB);
 }
 
-.td-checkbox {
-  display: flex;
-  align-items: center;
+.td-regular {
   padding: 1rem;
-  width: 0.875rem;
-  height: 1.5rem;
+
+  border-bottom: 1px solid var(--Greyscale-Border-Subtle, #EBEBEB);
 }
 
 .td-text {
-  flex: 1 0 0;
-  padding: 1rem;
-  
   /* For text overflow */
   overflow:hidden;
   text-overflow: ellipsis;
